*patched some bugs found in less error tolerant local dev environment: - commented out two lines in plugticles.plugin.php which caused a backend error by trying to change attributes of the non-existant form->delete and form->publish objects - added is_object checks to various form tabbing index incrementers in easyfeature.plugin.php - added is_object check to $publisher in article.single.php to avoid php memory overflows in cases when there's not yet a url for an author - same for home.php, some changes to styles.css accordingly - debugged mail.php

--- a/user/themes/euro/css/style.css
+++ b/user/themes/euro/css/style.css
@@ -1008,7 +1008,7 @@ span.entry-autor {
 	color: #666;
 	font-size: 0.9em;
 }
-span.entry-autor > a > span {
+span.entry-autor > * {
 	text-transform: uppercase;
 	font-family: Arial, sans-serif;
 	color: #555
